# CPP_Exercises

./: .gitignore  CMakeLists.txt  LICENSE
chap-02/5-polygon/: main.cpp
chap-04/1-hierarchy/: Boss.h  Intern.cpp  Intern.h
tp-02/: Event.h  Parsing.cpp  Reminders.cpp
tp-03/: TP3.md
tp-03/PhoneBook/: Tests.cpp
tp-04/PhoneCalls/: Person.h
tp-04/Shapes/: circle.hpp  line.hpp  line_seg.hpp
tp1/ex1/: main  main.cpp
tp1/ex2/: Person.cpp  Person.hpp  main  main.cpp
tp2/: Card.cpp  Card.hpp  Player.cpp  Player.hpp  main.cpp
tp2/Card/: Card.cpp  Card.hpp  main.cpp
tp3/: CMakeLists.txt  TP3.md
tp3/3-hrsoft/: CMakeLists.txt  HRSoftMain.cpp  HRSoftTest.cpp
tp3/3-hrsoft/HRSoft/: Department.hpp  Employee.hpp  HRSoftSystem.hpp
tp5/: TP5.md
tp7/: TP7.md
tp7/dungeon/: Character.hpp  Dungeon.cpp  Entity.hpp  Item.hpp  Potion.hpp  Trap.hpp
